banner to baner

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 		</div>
 	</header>
 	<div class="b-main">
-		<div class="b-banner">
+		<div class="b-baner">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6">
-						<div class="b-banner-image-mobile">
+						<div class="b-baner-image-mobile">
 							<img src="images/table.png" alt="">
 						</div>
-						<div class="b-banner-content">
+						<div class="b-baner-content">
 							<h1>Inspire your inspiration</h1>
-							<div class="b-banner-text">
+							<div class="b-baner-text">
 								Simple to use for your app, products<br> showcase and your inspiration
 							</div>
 							<p>
@@ -57,22 +57,22 @@
 								volutpat tempor. In quis arcu et eros porta lobortis sit
 							</p>
 						</div>
-						<div class="b-banner-icons">
-							<div class="b-banner-icons-wrapper">
-								<div class="b-banner-icons1">
+						<div class="b-baner-icons">
+							<div class="b-baner-icons-wrapper">
+								<div class="b-baner-icons1">
 									<img src="images/header_icon_1.png" alt="">
 								</div>
-								<div class="b-banner-icons1">
+								<div class="b-baner-icons1">
 									<img src="images/header_icon_2.png" alt="">
 								</div>
-								<div class="b-banner-icons1">
+								<div class="b-baner-icons1">
 									<img src="images/header_icon_3.png" alt="">
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-6">
-						<div class="b-banner-image">
+						<div class="b-baner-image">
 							<img src="images/table.png" alt="">
 						</div>
 					</div>
