--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 				<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 					<ul class="navbar-nav">	
 						<li class="nav-item">
-							<a class="nav-link" href="#">Features</a>
+							<a class="nav-link" href="#features">Features</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Support</a>
+							<a class="nav-link" href="#support">Support</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Blog</a>
+							<a class="nav-link" href="#blog">Blog</a>
 						</li>
 					</ul>
 				</div>
@@ -79,7 +79,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="b-features">
+		<div class="b-features" id="features">
 			<div class="container">
 				<div class="b-features-title">
 					<div class="b-title">Tinyone features</div>
@@ -216,7 +216,7 @@
 					</div>
 				</div>
 				<div class="b-footer-sending">
-					<form action="#" class="form-inline d-inline-block">
+					<form action="#" class="form-inline d-inline-block" id="support">
 						<div class="form-group d-inline-block">
 							<div class="b-footer-sending-imput">
 								<input type="email" class="form-control" placeholder="Enter your email to update">
